--- a/src/AutoDataTable.Benchmarks/AutoDataTable.Benchmarks.csproj
+++ b/src/AutoDataTable.Benchmarks/AutoDataTable.Benchmarks.csproj
@@ -5,15 +5,16 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>disable</Nullable>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\AutoDataTable.Abstractions\AutoDataTable.Abstractions.csproj" />
+      <ProjectReference Include="..\AutoDataTable.Core\AutoDataTable.Core.csproj" />
       <ProjectReference Include="..\AutoDataTable\AutoDataTable.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="BenchmarkDotNet" Version="0.13.6" />
+      <PackageReference Include="BenchmarkDotNet" Version="0.13.9" />
       <PackageReference Include="Bogus" Version="34.0.2" />
     </ItemGroup>
 
