--- a/src/AutoDataTable/AutoDataTable.csproj
+++ b/src/AutoDataTable/AutoDataTable.csproj
@@ -7,7 +7,7 @@
 
         <!-- NuGet -->
         <PackageId>AutoDataTable</PackageId>
-        <PackageVersion>1.0.0</PackageVersion>
+        <PackageVersion>1.1.0</PackageVersion>
         <Authors>Fabrício Gomes</Authors>
         <Description>Convert objects into DataTable rows</Description>
         <Copyright>Copyright © Fabrício Gomes 2023</Copyright>
@@ -25,14 +25,14 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\AutoDataTable.Abstractions\AutoDataTable.Abstractions.csproj" PrivateAssets="all" />
+        <ProjectReference Include="..\AutoDataTable.Core\AutoDataTable.Core.csproj" PrivateAssets="all" />
     </ItemGroup>
 
     <ItemGroup>
         <None Include="..\..\README.MD" Pack="true" PackagePath="\" />
         <None Include="..\..\icon.png" Pack="true" PackagePath="\" />
         <None Include="$(OutputPath)\AutoDataTable.dll" Pack="true" PackagePath="analyzers/dotnet/cs" Visible="false" />
-        <None Include="$(OutputPath)\AutoDataTable.Abstractions.dll" Pack="true" PackagePath="lib\netstandard2.0" Visible="false" />
+        <None Include="$(OutputPath)\AutoDataTable.Core.dll" Pack="true" PackagePath="lib\netstandard2.0" Visible="false" />
     </ItemGroup>
 
 </Project>
